Fix footer link contrast ratio

--- a/src/stylesheets/components/footer.sass
+++ b/src/stylesheets/components/footer.sass
@@ -77,7 +77,7 @@
     &-link
       +unbutton
       align-items: center
-      color: rgba($gray, .8)
+      color: $gray
       display: inline-flex
       gap: .5ch
       text-decoration: underline 1px solid transparent
@@ -112,4 +112,4 @@
       white-space: nowrap
 
   &__attribution
-    color: rgba($gray, .8)
+    color: $gray
